# Begitter

./: .hgignore  Cargo.toml  build.rs
resources/tests/.git-CONFLICT-5906b3e76e18aa70e540dc31b863b2f0/: COMMIT_EDITMSG  ORIG_HEAD  index
resources/tests/.git-CONFLICT-5906b3e76e18aa70e540dc31b863b2f0/info/: refs
resources/tests/.git-CONFLICT-5906b3e76e18aa70e540dc31b863b2f0/logs/: HEAD
resources/tests/.git-CONFLICT-5906b3e76e18aa70e540dc31b863b2f0/objects/info/: packs
resources/tests/.git-CONFLICT-5906b3e76e18aa70e540dc31b863b2f0/objects/pack/: pack-b288834a2f05c52b1033f68e7c9b25e747735a15.idx  pack-b288834a2f05c52b1033f68e7c9b25e747735a15.pack
resources/tests/.git-CONFLICT-5906b3e76e18aa70e540dc31b863b2f0/refs/heads/: develop  master
resources/tests/.git-CONFLICT-5906b3e76e18aa70e540dc31b863b2f0/refs/tags/: conflict-tests  reading-tests
resources/windows/: manifest.rc  manifest.xml  resources.rc
src/: git.rs  lib.rs  main.rs  parsing_utils.rs
src/change_set/: mod.rs  parser.rs
src/git/: mod.rs
src/model/: main.rs  mod.rs  patches.rs  rejects.rs
src/patch_editor/: mod.rs  parser.rs  patch.rs  test_data.rs
src/ui/: mod.rs  text.rs  windows.rs
src/ui/model/: main.rs
src/ui/windows/: dpi.rs  helpers.rs  main.rs  mod.rs  patches.rs  rejects.rs  text.rs  utils.rs
