[package]
name = "begitter"
version = "0.1.0"
authors = ["Alexander Gazarov <unrealrider@gmail.com>"]

[dependencies]
nom = "^3.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3", features = ["combaseapi", "errhandlingapi", "libloaderapi", "shobjidl", "winuser", "wincon", "winerror"] }
libc = "^0.2"

[dev-dependencies]
lazy_static = "^1.0"
regex = "^0.2"
tempdir = "^0.3"

[build-dependencies]
embed-resource = "^1.1"