[package]
name = "begitter"
version = "0.1.0"
authors = ["Alexander Gazarov <unrealrider@gmail.com>"]

[dependencies]
nom = "^4.0"
failure = "^0.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3", features = ["combaseapi", "commctrl", "errhandlingapi", "libloaderapi", "shobjidl", "winuser", "wincon", "windowsx", "winerror"] }
libc = "^0.2"
time = "^0.1"

[dev-dependencies]
lazy_static = "^1.0"
regex = "^0.2"
tempdir = "^0.3"

[build-dependencies]
embed-resource = "^1.1"